[project]
name = "pet-emergency-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Griy.py",email = "griy.py@gmail.com"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.9.6"
isort = "^6.0.0"
black = "^25.1.0"

