[project]
name = "pet-emergency-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Griy.py",email = "griy.py@gmail.com"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiosmtplib (>=4.0.0,<5.0.0)",
    "twilio (>=9.4.5,<10.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
ruff = "^0.9.6"
isort = "^6.0.0"
black = "^25.1.0"

